2011-03-18  Justin Novosad  <junov@chromium.org>

Reviewed by Kenneth Russell.

        [Chromium] Canvas shadow is not working with drawImage
        https://bugs.webkit.org/show_bug.cgi?id=55506

        Patch also fixes shadow blur quality and color.
        Affects Chromium win/linux. Also fixes the following bugs:
        https://bugs.webkit.org/show_bug.cgi?id=50112
        https://bugs.webkit.org/show_bug.cgi?id=51989
        https://bugs.webkit.org/show_bug.cgi?id=55410
        No tests were added, impact is already covered by multiple layout tests.

        * platform/chromium/test_expectations.txt:
2011-03-18  Justin Novosad  <junov@chromium.org>

        Reviewed by Kenneth Russell.

        [Chromium] Canvas shadow is not working with drawImage
        https://bugs.webkit.org/show_bug.cgi?id=55506

        Patch also fixes shadow blur quality and color.
        Affects Chromium win/linux. Also fixes the following bugs:
        https://bugs.webkit.org/show_bug.cgi?id=50112
        https://bugs.webkit.org/show_bug.cgi?id=51989
        https://bugs.webkit.org/show_bug.cgi?id=55410
        No tests were added, impact is already covered by multiple layout tests.

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::setPlatformShadow):
        * platform/graphics/skia/ImageSkia.cpp:
        (WebCore::paintSkBitmap):

Canonical link: https://commits.webkit.org/71348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81489 268f45cc-cd09-0410-ab3c-d52691b4dbfc